feat: Manage the data format version of data index.
